# StructuredKalmanSmoother

./: .gitignore  README.md  pyproject.toml
scripts/: air_quality_covariates.py  air_quality_dataloading.py  air_quality_dummy_sensors.py  air_quality_preprocessing.py  analyse_all_transitions.py  analyse_layers_stdgmrf.job  analyse_layers_stdgmrf.py  analyse_transitions_spdgmrf.py  analyse_transitions_stdgmrf.py  callbacks.py  constants.py  constants_dgmrf.py  dataloading.py  generate_data.py  pems_dataloading.py  pems_plotting.py  pems_preprocessing.py  run.py  run_ARIMA.py  run_BayesianLR.py  run_EnKS.py  run_KS.py  run_MLP.py  run_baselines.py  run_dgmrf.py  run_stdgmrf.py  sweep.job  sweep_AQ_stdgmrf.yaml  sweep_ARIMA.yaml  sweep_ARIMA_final.yaml  sweep_EnKS.yaml  sweep_KS.yaml  sweep_MLP.yaml  sweep_MLP_final.yaml  sweep_array.job  sweep_cpu.job  sweep_dgmrf.yaml  sweep_dgmrf_adv.yaml  sweep_dynamic_dgmrf.yaml  sweep_dynamic_dgmrf_0trans.yaml  (+15 more)
scripts/conf/: config.yaml  config_ARIMA.yaml  config_EnKS.yaml  config_KS.yaml  config_MLP.yaml
scripts/experiments/: sweep_AQ_stdgmrf.yaml  sweep_ARIMA.yaml  sweep_ARIMA_AQ.yaml  sweep_ARIMA_adv_diff_varying_w.yaml  sweep_ARIMA_testing.yaml  sweep_KS_AQ.yaml  sweep_KS_adv_diff_varying_w.yaml  sweep_KS_time.yaml  sweep_MLP.yaml  sweep_MLP_AQ.yaml  sweep_dgmrf.yaml  sweep_dgmrf_AQ.yaml  sweep_dgmrf_adv_diff_varying_w.yaml  sweep_dgmrf_features.yaml  sweep_dgmrf_largeAQ.yaml  sweep_dynamic_dgmrf.yaml  sweep_dynamic_dgmrf_ar.yaml  sweep_dynamic_dgmrf_diag_noise.yaml  (+11 more)
structuredKS/: cg_batch.py  utils.py
test/: test_layers.py
(+178 files in other folders)
