[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "structuredKS"
version = "0.0.1"
authors = [
  { name="Fiona Lippert" },
]
description = "Kalman smoother for high-dimensional dynamical systems"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
]

[project.urls]
"Homepage" = "https://github.com/FionaLippert/StructuredKalmanSmoother"