[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "stdgmrf"
version = "1.0.1"
authors = [
  { name="Fiona Lippert" },
]
description = "Kalman smoother for high-dimensional dynamical systems"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
]

[project.urls]
"Homepage" = "https://github.com/FionaLippert/StructuredKalmanSmoother"

#[project.optional-dependencies]
#test = [
#    "pytest-cov ~=3.0.0",
#]
#
#[tool.pytest.ini_options]
#addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 95"
#
#[tool.coverage.run]
#source = ["stdgmrf"]
